--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /*
  * Theme Name: Micro
+ * Theme URI: https://github.com/xavortm/wp-theme-micro
  * Author: DevriX
  * Author URI: http://devrix.com
  * Description: Very small dark WordPress theme with code-like styling based on underscores starter theme
