--- a/assets/sass/components/_entry.scss
+++ b/assets/sass/components/_entry.scss
@@ -3,6 +3,21 @@
 	padding-bottom: 20px;
 	border-bottom: 3px solid $color-text;
 
+	ul {
+		list-style-type: disc;
+		margin-left: 20px;
+	}
+
+	ol {
+	    list-style-type: decimal-leading-zero;
+	    margin-left: 43px;
+	}
+
+	h1,h2,h3,h4,h5 {
+		margin-bottom: 0.5rem;
+		margin-top: 1.2rem;
+	}
+
 	.entry-content {
 		margin: 10px 0;
 	}
@@ -27,10 +42,13 @@
 		}
 	}
 
-	.posted-on {
-		.updated {
-			margin-left: 20px;
+	.entry-footer {
+		& > span {
+			margin-right: 10px;
 		}
+	}
+
+	.posted-on {
 	}
 
 	.attachment-post-thumbnail {
