--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
  * Theme Name: Micro
  * Theme URI: https://github.com/xavortm/wp-theme-micro
- * Author: DevriX
+ * Author: xavortm
  * Author URI: http://devrix.com
  * Description: Very small dark WordPress theme with code-like styling based on underscores starter theme
- * Version: 1.0
+ * Version: 1.1
  * License: GNU General Public License v2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain: micro
