--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -1,3 +1,2 @@
 body {
-	font-family: "Monaco", "PT Mono", "Consolas", "courier new";
-}
+  font-family: "Monaco", "PT Mono", "Consolas", "courier new"; }
