--- a/assets/sass/components/_input.scss
+++ b/assets/sass/components/_input.scss
@@ -28,3 +28,12 @@ textarea {
 		outline: none;
 	}
 }
+
+select {
+	background: $color-background;
+	border: 1px solid $color-text;
+	color: $color-text;
+	font-size: 13px;
+	padding: 8px 20px;
+	height: 40px;
+}
