--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -1,6 +1,6 @@
 // Global settings
 $global-layout-gutter: 20px;
-$global-font-size: 14px;
+$global-font-size: 16px;
 $global-width: 1200px;
 
 
@@ -37,5 +37,5 @@ $color-link: $color-text;
 
 // Fonts
 $font-serif: Georgia, "Times New Roman", serif;
-$font-primary: "Monaco", "PT Mono", "Consolas", "courier new";
+$font-primary: "Courier", "PT Mono", "Consolas", "courier new";
 $font-heading: $font-primary;
