Lower entry margin

--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@
  * License: GNU General Public License v2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain: micro
- * Tags: two-columns, one-column, right-sidebar, custom-background, custom-color, custom-menu, featured-images, blog, translation-ready
+ * Tags: two-columns, one-column, right-sidebar, custom-background, custom-menu, featured-images, blog, translation-ready
  */
