--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -35,6 +35,7 @@
 @import "components/comment";
 @import "components/input";
 @import "components/entry";
+@import "components/gutenberg";
 @import "components/widgets";
 
 
